Temp-full screen layout kept saved without user "knowledge"; also giving troubles with layout navigation/ui freezing. #45369

Closed
opened 2015-07-07 16:29:24 +02:00 by mik arieta · 14 comments

System Information
Windows 7 64 bit

Blender Version
Broken: 2.74 , blender-2.75-6ed1a1a-win64

Short description of error
I opened a previously saved file that had a temp-full screen layout auto generated i guess, don't know how.

A problem is the temp-full layout can be deleted only if i change completely it's name; if i try to delete with original name will freeze the ui and the issue written down persist.

Another problem is that after a couple of screen layout changes wich ctrl+ l/r arrows the screen will get "stuck" to full screen. So i have to press ctrl+ up/down arrow to bring down the full screen mode.

Exact steps for others to reproduce the error

  • Open attached file
    screen layout bug.blend

  • try to change screen layout

  • after some ctrl+ left/right arrow the user interface will not respond well, same as trying to delete the temp-full layout.

Apologies if there is some mistake from my part.

**System Information** Windows 7 64 bit **Blender Version** Broken: 2.74 , blender-2.75-6ed1a1a-win64 **Short description of error** I opened a previously saved file that had a temp-full screen layout auto generated i guess, don't know how. A problem is the temp-full layout can be deleted only if i change completely it's name; if i try to delete with original name will freeze the ui and the issue written down persist. Another problem is that after a couple of screen layout changes wich ctrl+ l/r arrows the screen will get "stuck" to full screen. So i have to press ctrl+ up/down arrow to bring down the full screen mode. **Exact steps for others to reproduce the error** - Open attached file [screen layout bug.blend](https://archive.blender.org/developer/F204254/screen_layout_bug.blend) - try to change screen layout - after some ctrl+ left/right arrow the user interface will not respond well, same as trying to delete the temp-full layout. Apologies if there is some mistake from my part.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mikarieta

Added subscriber: @mikarieta
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Something strange is going on here, indeed :/

Something strange is going on here, indeed :/
Julian Eisel self-assigned this 2015-07-07 17:22:33 +02:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

C:\Users\Aaron\Downloads\blender-2.75-cf1bac3-win64\blender-2.75-cf1bac3-win64>blender -d
Switching to fully guarded memory allocator.
Blender 2.75 (sub 1)
Build: 2015-07-01 05:30:17 Windows:64bit Release
argv[0] = blender-app.exe
argv[1] = -d
read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.75\config\startup.blend
  Version 275 sub 1 date 2015-06-28 22:56 hash e6f7f36

ordered
 OBCube
 OBLamp
 OBCamera
read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.75\config\userpref.blend
  Version 275 sub 1 date 2015-06-30 21:41 hash cf1bac3
Read new prefs: C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.75\config\userpref.blend
AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 192000hz instead
found bundled python: C:\Users\Aaron\Downloads\blender-2.75-cf1bac3-win64\blender-2.75-cf1bac3-win64\2.75\python
read file
  Version 262 sub 3 date unknown hash
read file
  Version 268 sub 5 date unknown hash
read blend: C:\Users\Aaron\AppData\Local\Temp\quit.blend
read file C:\Users\Aaron\AppData\Local\Temp\screen layout bug.blend
  Version 275 sub 1 date 2015-06-30 21:41 hash cf1bac3

ordered
Error, region type 2 missing in - name:"File", id:5
Error, region type 2 missing in - name:"File", id:5
Error: Not freed memory blocks: 4, total unfreed memory 0.000740 MB
IDProperty len: 128 000000D7C4598DB8
IDProperty group len: 128 000000D7C4597628
IDProperty string len: 128 000000D7C4598F58
id property string 2 len: 4 000000D7C45D2B18

Blender quit
Press any key to exit . . .```


What I got from CMD
``` C:\Users\Aaron\Downloads\blender-2.75-cf1bac3-win64\blender-2.75-cf1bac3-win64>blender -d Switching to fully guarded memory allocator. Blender 2.75 (sub 1) Build: 2015-07-01 05:30:17 Windows:64bit Release argv[0] = blender-app.exe argv[1] = -d read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.75\config\startup.blend Version 275 sub 1 date 2015-06-28 22:56 hash e6f7f36 ordered OBCube OBLamp OBCamera read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.75\config\userpref.blend Version 275 sub 1 date 2015-06-30 21:41 hash cf1bac3 Read new prefs: C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.75\config\userpref.blend AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 192000hz instead found bundled python: C:\Users\Aaron\Downloads\blender-2.75-cf1bac3-win64\blender-2.75-cf1bac3-win64\2.75\python read file Version 262 sub 3 date unknown hash read file Version 268 sub 5 date unknown hash read blend: C:\Users\Aaron\AppData\Local\Temp\quit.blend read file C:\Users\Aaron\AppData\Local\Temp\screen layout bug.blend Version 275 sub 1 date 2015-06-30 21:41 hash cf1bac3 ordered Error, region type 2 missing in - name:"File", id:5 Error, region type 2 missing in - name:"File", id:5 Error: Not freed memory blocks: 4, total unfreed memory 0.000740 MB IDProperty len: 128 000000D7C4598DB8 IDProperty group len: 128 000000D7C4597628 IDProperty string len: 128 000000D7C4598F58 id property string 2 len: 4 000000D7C45D2B18 Blender quit Press any key to exit . . .``` What I got from CMD

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I loaded the file without Load UI option.
The layout was replaced normally.
The message of the problem was recorded only once right after I loaded a file.
result.txt

I loaded the file without Load UI option. The layout was replaced normally. The message of the problem was recorded only once right after I loaded a file. [result.txt](https://archive.blender.org/developer/F204472/result.txt)
Member

I investigated this a couple of days ago and I highly doubt this has anything to do with the temp fullscreen, I think the issue here is the "Error, region type 2 missing in - name:"File", id:5". Need to have another look though.

I investigated this a couple of days ago and I highly doubt this has anything to do with the temp fullscreen, I think the issue here is the "Error, region type 2 missing in - name:"File", id:5". Need to have another look though.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Was anyone able to get blender into a state that saves this buggy temp screen?

While we could probably make the file in the report not give problems, it would still be good to know how it was made.

Otherwise its possible this is just a corrupt file, which we can't support.

Was anyone able to get blender into a state that saves this buggy temp screen? While we could probably make the file in the report not give problems, it would still be good to know how it was made. Otherwise its possible this is just a corrupt file, which we can't support.

This issue was referenced by 0b21657897

This issue was referenced by 0b216578978a44f2649c45ac4a5ed07e73c80c33

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

for reference:

Looks like what happens is users open a user-prefs or render window (temp screen).
And then start using it as a regular window (split it, change space types... etc).

The problem is that temp windows have the restriction that you can't switch to other windows (Ctrl+Arrow keys).
However it was possible, by changing to an Info space, then using the ID-browser to select a different screen.

This is now disabled, so deleting, id-browsing & arrow keys can't activate a temp screen anymore.

for reference: Looks like what happens is users open a user-prefs or render window (temp screen). And then start using it as a regular window (split it, change space types... etc). The problem is that temp windows have the restriction that you can't switch to other windows (Ctrl+Arrow keys). However it **was** possible, by changing to an Info space, then using the ID-browser to select a different screen. This is now disabled, so deleting, id-browsing & arrow keys can't activate a temp screen anymore.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45369
No description provided.